# llm-practice

./: .gitignore  README.md  pyproject.toml
app/: llm_service.py  main.py
