[tool.poetry]
name = "llm-practice"
version = "0.1.0"
description = ""
authors = ["Mark Chang <mark.chang@vpon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langserve = {version = "^0.3.0", extras = ["all"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
